--- a/site/guide/attestation/set-up-attestations.qmd
+++ b/site/guide/attestation/set-up-attestations.qmd
@@ -37,7 +37,7 @@ Setting up attestations involves adding an attestation, configuring the attestat
 
 1. In the left sidebar, click **{{< fa gear >}} Settings**.
 
-2. Under Workspace Settings, select **Attestations**.
+2. Under Workspace, select **Attestations**.
 
 3. Click **{{< fa plus >}} Add New Attestation**.
 
@@ -71,7 +71,7 @@ Attestation periods reflect the time zone of the user setting up attestation and
 
 1. In the left sidebar, click **{{< fa gear >}} Settings**.
 
-2. Under Workspace Settings, select **Attestations** and then click an attestation to configure.
+2. Under Workspace, select **Attestations** and then click an attestation to configure.
 
 3. Click **{{< fa plus >}} Add Attestation Period**.
 
@@ -91,7 +91,7 @@ By default, attestations include the model name. Add additional model inventory 
 
 1. In the left sidebar, click **{{< fa gear >}} Settings**.
 
-2. Under Workspace Settings, select **Attestations** and then click an attestation to configure.
+2. Under Workspace, select **Attestations** and then click an attestation to configure.
 
 3. Under **Relevant Attestation Fields**, drag model inventory fields between columns:
 
@@ -117,7 +117,7 @@ ___
 
 1. In the left sidebar, click **{{< fa gear >}} Settings**.
 
-2. Under Workspace Settings, select **Attestations** and then click the attestation you want to configure.
+2. Under Workspace, select **Attestations** and then click the attestation you want to configure.
 
 3. Under **Questionnaire Template**, click the template area to edit. You can add rich text fields such as:
 
@@ -143,7 +143,7 @@ For testing purposes only, you can trigger the attestation process:
 
 1. In the left sidebar, click **{{< fa gear >}} Settings**.
 
-2. Under Workspace Settings, select **Attestations** and then click the attestation to test.
+2. Under Workspace, select **Attestations** and then click the attestation to test.
 
 3. Under **Scheduling**, hover over an attestation period.
 
@@ -157,7 +157,7 @@ After executing the schedule, the dashboard of the model owner displays a banner
 
 1. In the left sidebar, click **{{< fa gear >}} Settings**.
 
-2. Under Workspace Settings, select **Attestations** and then click the attestation period to edit.
+2. Under Workspace, select **Attestations** and then click the attestation period to edit.
 
 3. Under **Scheduling**, hover over an attestation period.
 
@@ -177,7 +177,7 @@ Edits to an attestation period will be effective for future occurrences but do n
 
 1. In the left sidebar, click **{{< fa gear >}} Settings**.
 
-2. Under Workspace Settings, select **Attestations** and then click the attestation to remove.
+2. Under Workspace, select **Attestations** and then click the attestation to remove.
 
 3. Under **Scheduling**, hover over an attestation period.
 
