--- a/site/guide/model-validation/manage-validation-guidelines.qmd
+++ b/site/guide/model-validation/manage-validation-guidelines.qmd
@@ -26,7 +26,7 @@ To set up validation guidelines, you'll need to complete these two steps in sequ
 
 1. In the left sidebar, click **{{< fa gear >}} Settings**.
 
-2. Under Workplace Settings, select **Risk Areas & Validation Guidelines**.
+2. Under Workspace, select **Risk Areas & Validation Guidelines**.
 
 3. Add, edit, or delete risk areas and their associated guidelines as required.
 
@@ -105,7 +105,7 @@ By default, the [{{< fa hand >}} Customer Admin]{.bubble} role has all these per
 
 1. In the left sidebar, click **{{< fa gear >}} Settings**. 
 
-2. Under Workplace Settings, select **Templates**.[^5]
+2. Under Workspace, select **Templates**.[^5]
 
 3. Select the **Validation Report** tab, then click on the template you want to edit.
 
