--- a/site/releases/2024/2024-sep-09/release-notes.qmd
+++ b/site/releases/2024/2024-sep-09/release-notes.qmd
@@ -24,7 +24,7 @@ Labels: enhancement
 :::: {.flex .flex-wrap .justify-around}
 
 ::: {.w-50-ns}
-We've expanded on our risk area functionality and added a new page to your Workplace Settings: **Risk Areas & Validation Guidelines**.
+We've expanded on our risk area functionality and added a new page to your Workspace: **Risk Areas & Validation Guidelines**.
 
 This replaces the old Risk Areas set up under **Organization**, and allows you to customize guidelines associated with your model validation templates.
 
@@ -34,7 +34,7 @@ This replaces the old Risk Areas set up under **Organization**, and allows you t
 
 ::: {.w-40-ns}
 
-![{{< fa align-left >}} Risk Areas & Validation Guidelines in Workspace Settings](settings-validation-guidelines.png){fig-alt="A screenshot showing the Risk Areas & Validation Guidelines in Workspace Settings" .screenshot}
+![{{< fa align-left >}} Risk Areas & Validation Guidelines in Workspace](settings-validation-guidelines.png){fig-alt="A screenshot showing the Risk Areas & Validation Guidelines in Workspace" .screenshot}
 
 :::
 
