--- a/site/training/administrator-fundamentals/customizing-your-model-inventory.qmd
+++ b/site/training/administrator-fundamentals/customizing-your-model-inventory.qmd
@@ -87,9 +87,9 @@ Already logged in and refreshed this module? Click [{{< fa chevron-right >}}]() 
 Use the model inventory to track comprehensive details for all your models throughout the model lifecycle. The model inventory is customizable and extensible, with a layout that can be configured to suit your needs.
 
 ::: {.embed}
-In a usual model lifecycle, models are independently registered in your model inventory by your development team.
+Typically, your development team will independently register models in your model inventory.
 
-For this training course, we'll have you register a dummy model via the **{{< fa plus >}} Register Model** modal to familiarize you with the {{< var validmind.platform >}} interface and the model details page.
+For this training course, you'll register a dummy model via the **{{< fa plus >}} Register Model** modal to familiarize you with the {{< var validmind.platform >}} interface and the model details page.
 :::
 
 **Let's register a model together** on the next page. {{< fa hand-point-right >}}
