--- a/site/training/administrator-fundamentals/onboarding-your-organization.qmd
+++ b/site/training/administrator-fundamentals/onboarding-your-organization.qmd
@@ -154,7 +154,7 @@ Get your organization ready for use by first defining business units and use cas
 **Add a business unit**
 :::
 
-1. Under Workplace Settings, select **Organization**.
+1. Under Workspace, select **Organization**.
 2. Click **{{< fa plus >}} Add New Business Unit** under Business Units.
 3. Enter in your **[business unit name]{.smallcaps}**.
 4. Click **{{< fa plus >}} Add Business Unit** to save your changes.
@@ -170,7 +170,7 @@ When you're done, click [{{< fa chevron-right >}}]() to continue.
 **Add a use case**
 :::
 
-1. Under Workplace Settings, select **Organization**.
+1. Under Workspace, select **Organization**.
 2. Click **{{< fa plus >}} Add New Use Case** under Use Cases.
 3. Enter in the **[title]{.smallcaps}** and select a **[category]{.smallcaps}** for your use case.
 4. Click **{{< fa plus >}} Add Use Case** to save your changes.
@@ -220,7 +220,7 @@ Next, define your risk areas and validation guidelines:
 **Add a risk area & validation guideline**
 :::
 
-Under Workplace Settings, select **Risk Areas & Validation Guidelines**:
+Under Workspace, select **Risk Areas & Validation Guidelines**:
 
 1. Click **{{< fa plus >}} Add Risk Area**.
 2. Provide a **[name]{.smallcaps}** and **[description]{.smallcaps}** for your risk area.
