--- a/site/training/validator-fundamentals/using-validmind-for-model-validation.qmd
+++ b/site/training/validator-fundamentals/using-validmind-for-model-validation.qmd
@@ -159,9 +159,9 @@ When you're done exploring, click [{{< fa chevron-right >}}]() to continue.
 Use the model inventory to track comprehensive details for all your models throughout the model lifecycle. The model inventory is customizable and extensible, with a layout that can be configured to suit your needs.
 
 ::: {.embed}
-In a usual model lifecycle, a champion model will have been independently registered in your model inventory and submitted to you for validation.
+Typically, you will be asked to validate a champion model that has already been independently registered in the model inventory.
 
-For this training course, we'll have you register a dummy model via the **{{< fa plus >}} Register Model** modal and assign yourself as the validator to familiarize you with the {{< var validmind.platform >}} interface.
+For this training course, you'll register a dummy model via the **{{< fa plus >}} Register Model** modal and assign yourself as the validator to familiarize you with the {{< var validmind.platform >}} interface.
 :::
 
 **Let's register a model together** for use with validation on the next page. {{< fa hand-point-right >}}
@@ -251,7 +251,7 @@ When you're done exploring, click [{{< fa chevron-right >}}]() to continue.
 :::: {.slideover--r .auto-collapse-10}
 **Explore sample model documentation**
 
-In a usual model lifecycle, a champion model will have been submitted to you for validation with completed model documentation.
+Typically, a champion model is submitted to you for validation with completed model documentation.
 
 Here, review the empty sample model documentation for the model you registered earlier to familiarize you with what the structure of documentation could look like when presented to you for review:
 
