--- a/site/guide/model-workflows/workflow-configuration-examples.qmd
+++ b/site/guide/model-workflows/workflow-configuration-examples.qmd
@@ -219,6 +219,7 @@ In this example, the workflow is designated to stop after running an additional 
     - [{{< fa wifi >}} Workflow State Change](#workflow-state-change)
     - [{{< fa users >}} Approval](#approval)
     - [{{< fa arrow-right-arrow-left >}} Run Workflow](#run-workflow)
+    - [{{< fa circle-stop >}} End](#end)
 
 [^2]: [Manage model stages](manage-model-stages.qmd)
 
@@ -233,6 +234,7 @@ In this example, the workflow is designated to stop after running an additional 
     - [{{< fa wifi >}} Workflow State Change](#workflow-state-change)
     - [{{< fa maximize >}} Condition Branch](#condition-branch)
     - [{{< fa users >}} Approval](#approval)
+    - [{{< fa circle-stop >}} End](#end)
 
 [^5]: [Manage model stages](manage-model-stages.qmd)
 
@@ -248,6 +250,7 @@ In this example, the workflow is designated to stop after running an additional 
     - [{{< fa cube >}} Model Stage Change](#model-stage-change)
     - [{{< fa wifi >}} Workflow State Change](#workflow-state-change)
     - [{{< fa clock >}} Wait](#wait)
+    - [{{< fa circle-stop >}} End](#end)
 
 [^9]: [Manage model stages](manage-model-stages.qmd)
 
