docs: Updated workflows (#759)
* Renamed model lifecycle statuses

* Updated manage-model-stages.qmd

* Working with model workflows > work with model workflows

* Set up model workflows > Configure custom workflows

* Setting up workflows WIP

* Moving step types

* Save point

* Save point

* Save point

* Fixing wrong links

* Broken link

* Shifting sidebar links around

* Repurposing working with model workflows

* Setup for working with workflows subpages

* Review model workflows framework

* Manage model workflows done

* Transition model workflows done

* Editing

* Getting rid of unused img

* Save point

* Save point

* Save point

* Configure custom workflows WIP

* Save point

* Save point

* Save point

* Save point

* Save point

* Workflow configuration examples setup

* Save point

* Save point

* Save point

* Save point

* Save point

* Save point

* Save point

* Examples wip

* Filename change + workflow deletion

* Moved guides to own sidebar

* Save point

* Save point

* Save point

* Save point

* Save point

* Save point

* Save point

* Deleting old unused img

* Tweak

* Ex. model stage change

* Ex. workflow state change

* Tweak

* Save point

* On model registration edit

* On model validation edit

* Example workflows edited

* ex. up to approval

* ex. up to condition branch

* All ex. -wait

* Editing

* Edit

* ex. Wait

* Fixing broken links

* Editing archive & delete models

* Proofreading setting up

* Casing edits that I will apply to frontend

* oops typo

* Edit

* Quick edit

--- a/site/guide/model-workflows/working-with-model-workflows.qmd
+++ b/site/guide/model-workflows/working-with-model-workflows.qmd
@@ -1,87 +1,21 @@
 ---
 title: "Working with model workflows"
 date: last-modified
+aliases:
+  - /guide/working-with-model-workflows.html
 listing:
-  - id: model-workflows-listing
+  - id: workflows
     type: grid
     grid-columns: 2
     max-description-length: 250
     sort: false
     fields: [title, description]
     contents:
-    - customize-model-lifecycle-statuses.qmd
-    - set-up-model-workflows.qmd
-aliases:
-  - /guide/working-with-model-workflows.html
+    - manage-model-workflows.qmd
+    - transition-model-workflows.qmd
 ---
 
-Manage lifecycle processes within your {{< var validmind.platform >}} setup using workflows. Customize both your workflows and your lifecycle statuses to reflect the procedures within your organization. 
+Once customized, use workflows to transition your models into their appropriate next stages throughout your model lifecycles.
 
-::: {.attn}
-
-## Prerequisites
-
-- [x] {{< var link.login >}}
-- [x] The model is registered in the model inventory.[^1]
-- [x] Model lifecycle statuses have already been customized for use in workflows.[^2]
-- [x] Workflows have already been set up for use with your models.[^3]
-- [x] You are a [{{< fa hand >}} Customer Admin]{.bubble} or assigned another role with sufficient permissions to perform the tasks in this guide.[^4] 
-
+:::{#workflows}
 :::
-
-## See workflow statuses
-
-To review the overall workflow status for a model: 
-
-{{< include _model-workflows-see.qmd >}}
-
-![Detailed workflow under the MODEL STATUS section](see-workflow.gif){fig-alt="A gif showing the detailed workflow under the MODEL STATUS section" .screenshot width=90%}
-
-## Transition workflow statuses
-
-::: {.callout-important title="Roles and action visibility"}
-Depending on the configuration of your workflows, you may or may not be able to move a model into another workflow state as actions can be gated to only users of certain roles. 
-
-When all the actions that can be performed by your role are completed for that model at that stage of the workflow, the Actions section will disappear from view. 
-:::
-
-To transition the overall workflow status for a model:
-
-{{< include _model-workflows-transition.qmd >}}
-
-![Transitioning a workflow status under the ACTIONS section](transition-workflow.gif){fig-alt="A gif showing transitioning a workflow status under the ACTIONS section" .screenshot width=90%}
-
-### Reset your model workflow
-
-If you need to reset your model's workflow to the beginning: 
-
-1. In the left sidebar, click **{{< fa cubes >}} Inventory**.
-
-2. Select a model or find your model by applying a filter or searching for it.[^5]
-
-3. Click on **[model status]{.smallcaps}**.
-
-4. Select **Reset Workflow**.
-
-    After you confirm, that model's workflow will be returned to its initial state. 
-
-![Resetting a workflow to its initial state](reset-workflow.gif){fig-alt="A gif showing resetting a workflow to its initial state" .screenshot width=90%}
-
-## What's next
-
-:::{#model-workflows-listing}
-:::
-
-
-
-<!-- FOOTNOTES -->
-
-[^1]: [Register models in the inventory](/guide/model-inventory/register-models-in-inventory.qmd)
-
-[^2]: [Customize model lifecycle statuses](customize-model-lifecycle-statuses.qmd)
-
-[^3]: [Working with model workflows](set-up-model-workflows.qmd)
-
-[^4]: [Manage permissions](/guide/configuration/manage-permissions.qmd)
-
-[^5]: [Working with the model inventory](/guide/model-inventory/working-with-model-inventory.qmd#search-filter-and-sort-models)
