--- a/site/releases/2024/2024-dec-06/release-notes.qmd
+++ b/site/releases/2024/2024-dec-06/release-notes.qmd
@@ -514,7 +514,7 @@ We now support including attachment fields as a request field on a User Action s
 :::
 
 ::: {.w-30-ns .tc}
-[Set up model workflows](/guide/model-workflows/set-up-model-workflows.qmd#attachments){.button}
+[Setting up model workflows](/guide/model-workflows/setting-up-model-workflows.qmd#attachments){.button}
 
 :::
 
@@ -535,9 +535,9 @@ We continue to add new functionality to model workflows within the {{< var valid
 :::
 
 ::: {.w-30-ns .tc}
-[Approval steps](/guide/model-workflows/set-up-model-workflows.qmd#approval){.button}
+[Approval steps](/guide/model-workflows/setting-up-model-workflows.qmd#approval){.button}
 
-[Condition Branch steps](/guide/model-workflows/set-up-model-workflows.qmd#condition-branch){.button}
+[Condition Branch steps](/guide/model-workflows/setting-up-model-workflows.qmd#condition-branch){.button}
 
 :::
 
@@ -943,7 +943,7 @@ We've expanded our reference guides on working with documentation templates, inc
 :::
 
 ::: {.w-40-ns .tc}
-[Working with documentation templates](/guide/templates/working-with-documentation-templates.qmd){.button}
+[Working with templates](/guide/templates/working-with-templates.qmd){.button}
 
 :::
 
@@ -1074,7 +1074,7 @@ Model lifecycle statuses have been renamed in the {{< var validmind.platform >}}
 :::
 
 ::: {.w-40-ns .tr}
-[Customize model lifecycle statuses](/guide/model-workflows/customize-model-lifecycle-statuses.qmd){.button}
+[Manage model stages](/guide/model-workflows/manage-model-stages.qmd){.button}
 
 :::
 
