--- a/site/training/administrator-fundamentals/customizing-your-model-inventory.qmd
+++ b/site/training/administrator-fundamentals/customizing-your-model-inventory.qmd
@@ -44,7 +44,7 @@ This second module is part of a four-part series:
 ::: {.f2}
 1. [The {{< var validmind.platform >}} model inventory](#the-validmind-inventory)
 2. [Configure model inventory fields](#configure-inventory-fields)
-3. [Customize documentation templates](#customize-documentation-templates)
+3. [Customize reusable templates](#customize-reusable-templates)
 4. [Configure reusable blocks](#configure-reusable-blocks)
 
 :::
@@ -236,16 +236,16 @@ When you're done, click [{{< fa chevron-right >}}]() to continue.
 
 ::::
 
-# Customize documentation templates {background-color="#083E44" background-image="/training/assets/home-hero.svg"}
+# Customize reusable templates {background-color="#083E44" background-image="/training/assets/home-hero.svg"}
 
 ## {.scrollable}
 
 :::: {.columns}
 ::: {.column width="30%" .pr4 .f2}
-Working with documentation templates
+Working with templates
 
 ::: {.tc}
-[Learn more ...](/guide/templates/working-with-documentation-templates.qmd){.button target="_blank"}
+[Learn more ...](/guide/templates/working-with-templates.qmd){.button target="_blank"}
 :::
 
 <br>Try it **live** on the next page. {{< fa hand-point-right >}}
