--- a/site/guide/model-workflows/manage-model-workflows.qmd
+++ b/site/guide/model-workflows/manage-model-workflows.qmd
@@ -20,7 +20,7 @@ Review workflows associated with your models, and initiate or abort workflows co
 
 ### Review active workflows
 
-{{< include _review-model-workflows.qmd >}}
+{{< include _review-active-workflows.qmd >}}
 
 ### Review workflow history
 
