--- a/site/guide/model-workflows/_review-active-workflows.qmd
+++ b/site/guide/model-workflows/_review-active-workflows.qmd
@@ -1,5 +1,5 @@
 :::: {.content-visible unless-format="revealjs"}
-Review the details for workflows active on a specific model:
+Review the details for workflows currently active on a specific model:
 
 1. In the left sidebar, click **{{< fa cubes >}} Inventory**.
 
@@ -19,7 +19,7 @@ Review the details for workflows active on a specific model:
 ::::
 
 :::: {.content-hidden unless-format="revealjs"}
-Review the details for workflows active on a specific model:
+Review the details for workflows currently active on a specific model:
 
 1. In the left sidebar, click **{{< fa cubes >}} Inventory**.
 
