--- a/site/guide/model-workflows/manage-model-workflows.qmd
+++ b/site/guide/model-workflows/manage-model-workflows.qmd
@@ -32,7 +32,7 @@ Review a timeline of workflows running or previously run on your model:
 
 3. On the landing page of your model, locate the Workflows section. If workflows are running or have previously run on your model, you can:
 
-    - Filter the view using **[show]{.smallcaps}** to display only runs from specific workflows.
+    - Filter the view using the **[show]{.smallcaps}** drop-down menu to display only runs from specific workflows.
 
     - Click **{{< fa arrow-right-arrow-left >}} See All Workflows** to see records of workflows by status:
         - **Active** — Workflows currently running.
@@ -91,7 +91,7 @@ To remove a workflow from a model:
 
 [^1]: [Register models in the inventory](/guide/model-inventory/register-models-in-inventory.qmd)
 
-[^2]: [Configure custom workflows](configure-model-workflows.qmd)
+[^2]: [Configure model workflows](configure-model-workflows.qmd)
 
 [^3]: [Manage permissions](/guide/configuration/manage-permissions.qmd)
 
@@ -106,7 +106,7 @@ To remove a workflow from a model:
 [^8]:
 
     ::: {.callout title="Workflows can be set to run automatically on specific triggers."}
-    Refer to [Configure custom workflows](configure-model-workflows.qmd) for more details.
+    Refer to [Configure model workflows](configure-model-workflows.qmd) for more details.
     :::
 
 [^9]: [Working with the model inventory](/guide/model-inventory/working-with-model-inventory.qmd#search-filter-and-sort-models)
