--- a/site/guide/model-workflows/transition-model-workflows.qmd
+++ b/site/guide/model-workflows/transition-model-workflows.qmd
@@ -49,7 +49,7 @@ If you need to reset a model's workflow to the beginning:
 
 [^2]: [Manage model stages](manage-model-stages.qmd)
 
-[^3]: [Configure custom workflows](configure-model-workflows.qmd)
+[^3]: [Configure model workflows](configure-model-workflows.qmd)
 
 [^4]: [Manage permissions](/guide/configuration/manage-permissions.qmd)
 
