Added instructions for resume workflows

--- a/site/guide/model-workflows/manage-model-workflows.qmd
+++ b/site/guide/model-workflows/manage-model-workflows.qmd
@@ -65,6 +65,20 @@ To manually start a workflow[^8] for a specific model:
 
 6. Click **{{< fa arrow-right >}} Run Workflow Now** to confirm.
 
+### Resume workflows
+
+To manually resume a workflow in a wait state:[^6]
+
+1. In the left sidebar, click **{{< fa cubes >}} Inventory**.
+
+2. Select a model or find your model by applying a filter or searching for it.[^7]
+
+3. On the landing page of your model, locate the [active workflows]{.smallcaps} section.
+
+4. For the workflow you'd like to manually advance, click **{{< fa arrow-right-arrow-left >}} Resume Workflow** to open up the workflow's step overview.
+
+5. On the **{{< fa clock >}} Wait** step, double-click on **{{< fa arrow-right-arrow-left >}}** to advance the workflow immediately.
+
 ## Abort workflows
 
 ::: {.callout}
@@ -76,7 +90,7 @@ To remove a workflow from a model:
 
 1. In the left sidebar, click **{{< fa cubes >}} Inventory**.
 
-2. Select a model or find your model by applying a filter or searching for it.[^10]
+2. Select a model or find your model by applying a filter or searching for it.[^8]
 
 3. On the landing page of your model, locate the [active workflows]{.smallcaps} section.
 
@@ -91,24 +105,20 @@ To remove a workflow from a model:
 
 [^1]: [Register models in the inventory](/guide/model-inventory/register-models-in-inventory.qmd)
 
-[^2]: [Configure model workflows](configure-model-workflows.qmd)
+[^2]: [Configure custom workflows](configure-model-workflows.qmd)
 
 [^3]: [Manage permissions](/guide/configuration/manage-permissions.qmd)
 
-[^4]:  [Working with the model inventory](/guide/model-inventory/working-with-model-inventory.qmd#search-filter-and-sort-models)
-
-[^5]: [Setting up model workflows](setting-up-model-workflows.qmd#conditional-requirements)
-
-[^6]: [Abort workflows](#abort-workflows)
-
-[^7]: [Initiate model workflows](#initiate-model-workflows)
-
-[^8]:
+[^4]:
 
     ::: {.callout title="Workflows can be set to run automatically on specific triggers."}
-    Refer to [Configure model workflows](configure-model-workflows.qmd) for more details.
+    Refer to [Configure custom workflows](configure-model-workflows.qmd) for more details.
     :::
 
-[^9]: [Working with the model inventory](/guide/model-inventory/working-with-model-inventory.qmd#search-filter-and-sort-models)
+[^5]: [Working with the model inventory](/guide/model-inventory/working-with-model-inventory.qmd#search-filter-and-sort-models)
 
-[^10]: [Working with the model inventory](/guide/model-inventory/working-with-model-inventory.qmd#search-filter-and-sort-models)
+[^6]: [Setting up model workflows](setting-up-model-workflows.qmd#conditional-requirements)
+
+[^7]: [Working with the model inventory](/guide/model-inventory/working-with-model-inventory.qmd#search-filter-and-sort-models)
+
+[^8]: [Working with the model inventory](/guide/model-inventory/working-with-model-inventory.qmd#search-filter-and-sort-models)
