Footer spacing improvements for guides, wording tweak for developer content to improve formatting

--- a/site/index.qmd
+++ b/site/index.qmd
@@ -268,7 +268,7 @@ Setup + Administration
 Model Development
 :::
 
-[Save time by automating documentation and testing for your models using the ValidMind Library.]{.mid-gray .f4}
+[Save time by automating documentation and testing for your models using our library.]{.mid-gray .f4}
 
 [**Developer Quickstart**](/get-started/developer/quickstart-developer.qmd){.button-green .cta}
 :::
