Clarification edits & footnotes

--- a/site/guide/model-workflows/manage-model-workflows.qmd
+++ b/site/guide/model-workflows/manage-model-workflows.qmd
@@ -37,10 +37,10 @@ Review a timeline of workflows running or previously run on your model:
     - Click **{{< fa arrow-right-arrow-left >}} See All Workflows** to see records of workflows by status:
         - **Active** — Workflows currently running.
         - **Scheduled** — Workflows slated to run in the future.
-        - **Waiting** — Workflows in a wait state.[^5]
-        - **Finished** — Completed workflows.
-        - **Aborted** — Cancelled workflows.[^6]
-        - **Available** — Workflows available to be run manually.[^7]
+        - **Waiting** — Workflows in a {{< fa clock >}} Wait state.[^5]
+        - **Finished** — Workflows that have reached an {{< fa circle-stop >}} End state.[^6]
+        - **Aborted** — Cancelled workflows.[^7]
+        - **Available** — Workflows available to be run manually.[^8]
 
 ## Initiate model workflows
 
@@ -48,11 +48,11 @@ Review a timeline of workflows running or previously run on your model:
 By default, the [{{< fa hand >}} Customer Admin]{.bubble} role has sufficient permissions to manually start model workflows.
 :::
 
-To manually start a workflow[^8] for a specific model:
+To manually start a workflow[^9] for a specific model:
 
 1. In the left sidebar, click **{{< fa cubes >}} Inventory**.
 
-2. Select a model or find your model by applying a filter or searching for it.[^9]
+2. Select a model or find your model by applying a filter or searching for it.[^10]
 
 3. On the landing page of your model, locate the [active workflows]{.smallcaps} section.
 
@@ -67,11 +67,11 @@ To manually start a workflow[^8] for a specific model:
 
 ### Resume workflows
 
-To manually resume a workflow in a wait state:[^6]
+To manually resume a workflow in a {{< fa clock >}} Wait state:[^11]
 
 1. In the left sidebar, click **{{< fa cubes >}} Inventory**.
 
-2. Select a model or find your model by applying a filter or searching for it.[^7]
+2. Select a model or find your model by applying a filter or searching for it.[^12]
 
 3. On the landing page of your model, locate the [active workflows]{.smallcaps} section.
 
@@ -90,7 +90,7 @@ To remove a workflow from a model:
 
 1. In the left sidebar, click **{{< fa cubes >}} Inventory**.
 
-2. Select a model or find your model by applying a filter or searching for it.[^8]
+2. Select a model or find your model by applying a filter or searching for it.[^13]
 
 3. On the landing page of your model, locate the [active workflows]{.smallcaps} section.
 
@@ -109,16 +109,26 @@ To remove a workflow from a model:
 
 [^3]: [Manage permissions](/guide/configuration/manage-permissions.qmd)
 
-[^4]:
+[^4]: [Working with the model inventory](/guide/model-inventory/working-with-model-inventory.qmd#search-filter-and-sort-models)
+
+[^5]: [Setting up model workflows](setting-up-model-workflows.qmd#conditional-requirements)
+
+[^6]: [Setting up model workflows](setting-up-model-workflows.qmd#workflow-step-types)
+
+[^7]: [Abort workflows](#abort-workflows)
+
+[^8]: [Initiate model workflows](#initiate-model-workflows)
+
+[^9]:
 
     ::: {.callout title="Workflows can be set to run automatically on specific triggers."}
     Refer to [Configure custom workflows](configure-model-workflows.qmd) for more details.
     :::
 
-[^5]: [Working with the model inventory](/guide/model-inventory/working-with-model-inventory.qmd#search-filter-and-sort-models)
+[^10]: [Working with the model inventory](/guide/model-inventory/working-with-model-inventory.qmd#search-filter-and-sort-models)
 
-[^6]: [Setting up model workflows](setting-up-model-workflows.qmd#conditional-requirements)
+[^11]: [Setting up model workflows](setting-up-model-workflows.qmd#conditional-requirements)
 
-[^7]: [Working with the model inventory](/guide/model-inventory/working-with-model-inventory.qmd#search-filter-and-sort-models)
+[^12]: [Working with the model inventory](/guide/model-inventory/working-with-model-inventory.qmd#search-filter-and-sort-models)
 
-[^8]: [Working with the model inventory](/guide/model-inventory/working-with-model-inventory.qmd#search-filter-and-sort-models)
+[^13]: [Working with the model inventory](/guide/model-inventory/working-with-model-inventory.qmd#search-filter-and-sort-models)
