--- a/site/guide/model-workflows/_review-active-workflows.qmd
+++ b/site/guide/model-workflows/_review-active-workflows.qmd
@@ -14,7 +14,7 @@ Review the details for workflows currently active on a specific model:
     - **Details** — Name and description (if present) of the workflow, the workflow's status and progress (if applicable), when it was created, and when it was started.
     - **Activity** — History of updates to the workflow on that model.
     - **Findings** — Findings for that model created within the duration of that workflow's runtime.
-    - **Workflow**^[Hover over a workflow step to view an animation of the steps connecting to and from that step.] — Overview of the entire workflow. The current workflow state is highlighted on this view.
+    - **Workflow**^[Hover over a workflow step to view an animation of the steps connecting to and from that step.] — Overview of the entire workflow. The current workflow step is highlighted on this view.
 
 ::::
 
@@ -34,7 +34,7 @@ Review the details for workflows currently active on a specific model:
     - **Details** — Name and description (if present) of the workflow, the workflow's status and progress (if applicable), when it was created, and when it was started.
     - **Activity** — History of updates to the workflow on that model.
     - **Findings** — Findings for that model created within the duration of that workflow's runtime.
-    - **Workflow** — Overview of the entire workflow. The current workflow state is highlighted on this view.
+    - **Workflow** — Overview of the entire workflow. The current workflow step is highlighted on this view.
 
 ::::
 
