--- a/site/guide/model-workflows/manage-model-workflows.qmd
+++ b/site/guide/model-workflows/manage-model-workflows.qmd
@@ -85,8 +85,7 @@ To manually resume a workflow in a {{< fa clock >}} Wait state:[^11]
 By default, the [{{< fa hand >}} Customer Admin]{.bubble} role has sufficient permissions to abort workflows.
 :::
 
-
-To remove a workflow from a model:
+To cancel a run of a workflow on a model:
 
 1. In the left sidebar, click **{{< fa cubes >}} Inventory**.
 
